# genea-tree

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08f46ef94075_add_refresh_tokens.py  ad50e71d3964_initial.py  de75b43af2fd_create_users_trees_persons_relationships.py
backend/app/: main.py
backend/app/api/v1/: auth.py  persons.py  relationships.py
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  person.py  refresh_token.py  relationship.py  tree.py  user.py
backend/app/schemas/: auth.py  person.py  relationship.py
backend/app/services/: auth.py  persons.py  relationships.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_models.py  test_persons.py  test_relationships.py  test_security.py
doc/: Product Requirements.md  Technical Specification.md
docker/: Caddyfile  docker-compose.yml
docs/superpowers/plans/: 2026-04-16-phase-1-backlog.md
